--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Options</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,40 +10,72 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <!-- Tonalité Switch -->
-    <ion-item>
+    <ion-item lines="none">
       <ion-label>Tonalité</ion-label>
       <div class="toggle-container">
-        <ion-icon></ion-icon>
+        <ion-icon src="assets/icon/trumpet.svg" size="large"></ion-icon>
         <ion-toggle
           (ionChange)="toggleTone($event)"
           [checked]="tone() === 'mib'"
         ></ion-toggle>
-        <ion-icon src="assets/icon/clarinet.svg"></ion-icon>
+        <ion-icon src="assets/icon/clarinet.svg" size="large"></ion-icon>
       </div>
     </ion-item>
 
     <ion-item-divider></ion-item-divider>
 
     <!-- Inclure Aubade Matinale -->
-    <ion-item>
+    <ion-item lines="none">
       <ion-label>Inclure Aubade Matinale</ion-label>
-      <ion-checkbox slot="end"> </ion-checkbox>
+      <ion-checkbox
+        slot="end"
+        [checked]="!isAubadeRemoved()"
+        (ionChange)="toggleAubade()"
+      >
+      </ion-checkbox>
     </ion-item>
 
     <!-- Inclure Mitant des Camps -->
-    <ion-item>
+    <ion-item lines="none">
       <ion-label>Inclure Mitant des Camps</ion-label>
-      <ion-checkbox slot="end"> </ion-checkbox>
+      <ion-checkbox
+        slot="end"
+        [checked]="!isMitantDesCampsRemoved()"
+        (ionChange)="toggleMitantDesCamps()"
+      ></ion-checkbox>
     </ion-item>
 
     <ion-item-divider></ion-item-divider>
 
     <!-- Réinitialiser Ordre -->
-    <ion-item>
+    <ion-item lines="none">
       <ion-label>Réinitialiser ordre</ion-label>
-      <ion-button slot="end">
+      @if(isOrderOriginal()){
+
+      <ion-button slot="end" disabled shape="round">
+        <ion-icon src="assets/icon/check.svg" size="large"></ion-icon>
+      </ion-button>
+      } @else {
+
+      <ion-button slot="end" (click)="resetOrder()" shape="round">
         <ion-icon src="assets/icon/restart.svg" size="large"></ion-icon>
       </ion-button>
+      }
+    </ion-item>
+
+    <ion-item-divider></ion-item-divider>
+
+    <ion-item lines="none">
+      <ion-label>Theme</ion-label>
+      <div class="toggle-container">
+        <ion-icon src="assets/icon/light_mode.svg" size="large"></ion-icon>
+        <ion-toggle
+          (ionChange)="toggleTheme()"
+          [checked]="isDarkMode()"
+          class="ion-toggle-theme"
+        ></ion-toggle>
+        <ion-icon src="assets/icon/dark_mode.svg" size="large"></ion-icon>
+      </div>
     </ion-item>
   </ion-list>
 </ion-content>
