--- a/src/global.scss
+++ b/src/global.scss
@@ -34,40 +34,38 @@
  */
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
-/* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
+@import "@ionic/angular/css/palettes/dark.class.css";
+/*@import '@ionic/angular/css/palettes/dark.system.css'; */
 
 /* Toolbar background set to primary color */
 ion-header {
-    --background: var(--ion-color-primary);
+  --background: var(--ion-color-primary);
 }
 ion-toolbar {
-    --background: var(--ion-color-primary);
-    --border-color: transparent; /* Remove default Ionic border */
-    --padding-start: 0px; /* Remove left padding */
-    --padding-end: 0px;   /* Remove right padding */
-    --inner-padding-start: 0px; /* Reduce internal padding */
+  --background: var(--ion-color-primary);
+  --border-color: transparent; /* Remove default Ionic border */
+  --padding-start: 0px; /* Remove left padding */
+  --padding-end: 0px; /* Remove right padding */
+  --inner-padding-start: 0px; /* Reduce internal padding */
 }
 
 /* Toolbar buttons styling */
 ion-toolbar ion-button,
 ion-toolbar ion-menu-button {
-    --color: var(--ion-text-color-step-950); /* Dark color for buttons */
+  --color: var(--ion-text-color-step-950); /* Dark color for buttons */
 }
 
 /* Toolbar title styling */
 ion-toolbar ion-title,
 ion-toolbar ion-icon {
-    color: var(--ion-text-color-step-950);
-    font-weight: bold; /* Optional: make the title bold for emphasis */
-    margin-left: 0px;
-    padding-left: 4px;
-    padding-right: 4px;
+  color: var(--ion-text-color-step-950);
+  font-weight: bold; /* Optional: make the title bold for emphasis */
+  margin-left: 0px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 /* Ensure consistency for collapsed headers (condensed toolbar) */
 ion-header ion-toolbar[collapse="condense"] {
-    --background: var(--ion-color-primary);
+  --background: var(--ion-color-primary);
 }
-
-  
