add history delete on line

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
           }
         </ion-list>
       </ion-content>
+      <ion-footer class="menu-footer">
+        <div class="footer-text">Gillou - AM-e.dev</div>
+      </ion-footer>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
