--- a/src/app/components/score-history/score-history-modal/score-history-modal.component.html
+++ b/src/app/components/score-history/score-history-modal/score-history-modal.component.html
@@ -6,11 +6,13 @@
       ></ion-button>
     </ion-buttons>
     <ion-title>Historique</ion-title>
+    @if(!isHistoryEmpty()) {
     <ion-buttons slot="end">
       <ion-button (click)="deleteHistory()">
         <ion-icon src="assets/icon/delete.svg" size="large"></ion-icon>
       </ion-button>
     </ion-buttons>
+    }
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
